# fortissimo

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  readme.md
dev-aux/special-files/: sst.gmk
doc/: demo-slides.odp
doc/wiki/: trap_commit
doc/wiki/design/: design.md  protocol.md  uml.dia
example/src/main/cpp/: CMakeLists.txt  main.cpp  quicksort_dealer.cpp  quicksort_network_test.cpp  siso_sort_dealer.cpp  siso_sort_network_test.cpp
lib/: .gitignore  Makefile
src/bash/functions/path/: path_get_prefix.bash
src/bash/preludes/: standard.bash
src/bash/scripts/gitlab-ci/: wiki
src/gitlab-ci/preludes/: standard.yml
src/main/cpp/: CMakeLists.txt
src/main/cpp/ff/: Actions.h  Fronctocol.h  Fronctocol.t.h  FronctocolHandler.h  FronctocolHandler.t.h  FronctocolsManager.h  FronctocolsManager.t.h  Message.h  Message.t.h  PeerSet.h  PeerSet.t.h  Promise.h  Util.cpp  Util.h  VectorPeerSet.h  VectorPeerSet.t.h  logging.cpp  logging.h
src/main/cpp/ff/posixnet/: posixnet.h  posixnet.t.h  posixnet_posix.h  posixnet_windows.h
src/main/cpp/ff/tester/: Tester.h  Tester.t.h  runTests.h  runTests.t.h
src/main/cpp/mpc/: AbstractZipReduceFactory.h  Batch.h  Batch.t.h  BitwiseCompare.h  BitwiseCompare.t.h  Compare.h  Compare.t.h  CompareDealer.h  CompareDealer.t.h  Divide.h  Divide.t.h  DivideDealer.h  DivideDealer.t.h  Matrix.h  Matrix.t.h  MatrixMult.h  MatrixMult.t.h  ModConvUp.h  ModConvUp.t.h  ModConvUpDealer.h  ModConvUpDealer.t.h  ModUtils.cpp  ModUtils.h  Multiply.cpp  Multiply.h  Multiply.t.h  ObservationList.h  ObservationList.t.h  PosIntCompare.h  PosIntCompare.t.h  PosIntCompareDealer.h  PosIntCompareDealer.t.h  PrefixOr.h  PrefixOr.t.h  PrefixOrDealer.h  PrefixOrDealer.t.h  Quicksort.h  Quicksort.t.h  QuicksortDealer.h  QuicksortDealer.t.h  (+31 more)
src/main/python/: Measure.py  analyze.py  csvify.py  graphify.py
src/main/scripts/: gitlab_ci_format  gitlab_ci_test
src/test/cpp/: CMakeLists.txt  mock.cpp  mock.h
src/test/cpp/ff/: DiffieHellman.test.cpp  Message.test.cpp  Util.test.cpp  ValueSum.test.cpp  VectorPeerSet.test.cpp  abort.test.cpp  logging.test.cpp
src/test/cpp/mpc/: Batch.test.cpp  BatchCompare.test.cpp  BitwiseCompare.test.cpp  BitwiseCompare2parties.test.cpp  Compare.test.cpp  Compare2parties.test.cpp  Divide.test.cpp  MatrixInverse.test.cpp  MatrixMult.test.cpp  ModConvUp.test.cpp  Multiply.test.cpp  PosIntCompare.test.cpp  PrefixOr.test.cpp  PrefixOr2parties.test.cpp  Quicksort.test.cpp  Randomness.test.cpp  SISOSort.test.cpp  TypeCastBit.test.cpp  UnboundedFaninOr.test.cpp  Waksman.test.cpp  ZipAdjacent.test.cpp  ZipReduce.test.cpp  lagrange.test.cpp
